err/yarpc.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/crossdock'...
Listing './lib/python3.5/site-packages/crossdock/async'...
Listing './lib/python3.5/site-packages/crossdock/async/client'...
Listing './lib/python3.5/site-packages/crossdock/async/client/behavior'...
Listing './lib/python3.5/site-packages/crossdock/async/server'...
Listing './lib/python3.5/site-packages/crossdock/async/server/procedure'...
Listing './lib/python3.5/site-packages/crossdock/sync'...
Listing './lib/python3.5/site-packages/crossdock/sync/client'...
Listing './lib/python3.5/site-packages/crossdock/sync/client/behavior'...
Listing './lib/python3.5/site-packages/examples'...
Compiling './lib/python3.5/site-packages/examples/ping_client_thrift.py'...
***   File "./lib/python3.5/site-packages/examples/ping_client_thrift.py", line 13
    print client.ping('world')
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/thriftrw'...
Listing './lib/python3.5/site-packages/thriftrw/compile'...
Listing './lib/python3.5/site-packages/thriftrw/idl'...
Listing './lib/python3.5/site-packages/thriftrw/protocol'...
Listing './lib/python3.5/site-packages/thriftrw/spec'...
Listing './lib/python3.5/site-packages/thriftrw/wire'...
Listing './lib/python3.5/site-packages/thriftrw-1.5.1.egg-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './lib/python3.5/site-packages/yarpc'...
Compiling './lib/python3.5/site-packages/yarpc/_future.py'...
***   File "./lib/python3.5/site-packages/yarpc/_future.py", line 32
    raise exc_info[0], exc_info[1], exc_info[2]
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yarpc/encoding'...
Listing './lib/python3.5/site-packages/yarpc/sync'...
Listing './lib/python3.5/site-packages/yarpc/testing'...
Listing './lib/python3.5/site-packages/yarpc/transport'...
Listing './lib/python3.5/site-packages/yarpc/transport/http'...
Listing './lib/python3.5/site-packages/yarpc/transport/tchannel'...
Listing './lib/python3.5/site-packages/yarpc-0.7.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
